# korean-word-parser

./: Cargo.toml
data/: 역재6 오픈 검수 - 에피소드1.csv  역재6 오픈 검수 - 에피소드2.csv  역재6 오픈 검수 - 에피소드3.csv  역재6 오픈 검수 - 에피소드4.csv
src/: main.rs  utils.rs
