[package]
name = "korean-word-parser"
version = "0.1.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
hangeul = "0.2.0"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
